# poetry-slam

./: Cargo.toml  README.md  Rocket.toml  build.rs
assets/data/: Reife Früchte vom Bierbaum by Otto Julius Bierbaum.txt  Unser täglich Gift Gedichte by Otfried Krzyzanowski.txt  anettevondrostehuelshoff.txt  georgtraklösterreichischerexpressionist.txt  hessesiddhartha.txt  rainermariarilke.txt
data/: Unser täglich Gift Gedichte by Otfried Krzyzanowski.TXT  aerzte.txt  britneyspears.txt  georgtraklösterreichischerexpressionist.TXT  johannwolfgangvongoethe-friedrichschiller-balladen.txt  johannwolfgangvongoethe-gedichte.txt  ndw.txt  terencemckennaquotes.csv
src/: main.rs  poem_generator.rs  printer.rs  training_data.rs
templates/: index.html.tera
