[package]
name = "poetry-slam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
flume = "0.10.14"
serde = { version = "1.0", features = ["derive"] }
image = {version = "0.24.3", default-features = false, features = ["png"]}
lazy_static = "1.4.0"
reqwest = {version = "0.11.11", default-features = false, features = ["json"]}
rocket = {version = "0.5.0-rc.2"}
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
